@@ -70,17 +70,17 @@ man_MANS = base/alloc.3 base/byte.3 base/caldate.3 base/caldate_mjd.3 \
 docs = README doc/ChangeLog COPYING AUTHORS
 docdir=@docdir@
 
-include_HEADERS = base/alloc.h base/arc4random.h base/base64.h \
+include_HEADERS = base/alloc.h base/arc4random.h base/authmethods.h base/base64.h \
 	base/builtinoflmacros.h base/byte.h base/caldate.h base/caltime.h \
 	base/case.h base/cdb.h base/cdb_make.h base/cdbmake.h base/cdbmss.h \
 	base/check_domain.h base/coe.h base/commands.h base/constmap.h \
 	base/date822fmt.h base/datetime.h base/digest_md5.h base/direntry.h \
 	base/env.h base/error.h base/envdir.h base/evaluate.h base/fd.h \
 	base/fifo.h base/fmt.h base/gen_allocdefs.h base/gen_alloc.h \
-	base/getEnvConfig.h base/getln.h base/global.h base/hasbltnofl.h \
-	base/hmac.h base/in_crypt.h base/iopause.h base/isnum.h base/leapsecs.h \
-	base/lock.h base/makeargs.h base/makesalt.h base/md5.h base/mess822.h \
-	base/mkpasswd.h base/mktempfile.h base/ndelay.h base/noreturn.h \
+	base/get_scram_secrets.h base/getEnvConfig.h base/getln.h base/global.h \
+	base/hasbltnofl.h base/hmac.h base/in_crypt.h base/iopause.h base/isnum.h \
+	base/leapsecs.h base/lock.h base/makeargs.h base/makesalt.h base/md5.h \
+	base/mess822.h base/mkpasswd.h base/mktempfile.h base/ndelay.h base/noreturn.h \
 	base/now.h base/no_of_days.h base/open.h base/openreadclose.h \
 	base/pathexec.h base/prot.h base/pw_comp.h base/qgetpwgr.h base/qtime.h \
 	base/readclose.h base/replacestr.h base/rewritehost.h base/ripemd.h \
@@ -109,17 +109,16 @@ COMMONSOURCES = base/alloc.c base/alloc_re.c base/arc4random.c base/base64sub.c 
 	base/envread.c base/error.c base/error_str.c base/error_temp.c \
 	base/evaluate.c base/fd_copy.c base/fd_move.c base/fifo.c \
 	base/fmt_8long.c base/fmt_double.c base/fmt_fill.c base/fmt_hexbytes.c \
-	base/fmt_hexdump.c \
-	base/fmt_int.c base/fmt_long.c base/fmt_minus.c base/fmt_pad.c \
+	base/fmt_hexdump.c base/fmt_int.c base/fmt_long.c base/fmt_minus.c base/fmt_pad.c \
 	base/fmt_plusminus.c base/fmt_str.c base/fmt_strn.c base/fmt_uint0.c \
 	base/fmt_uint.c base/fmt_ulong.c base/fmt_ulonglong.c base/fmt_ushort.c \
-	base/fmt_xlong.c base/getEnvConfig.c base/getln2.c base/getln.c \
-	base/hmac_md5.c base/hmac_ripemd.c base/hmac_sha1.c base/hmac_sha224.c \
-	base/hmac_sha256.c base/hmac_sha384.c base/hmac_sha512.c base/in_crypt.c \
-	base/iopause.c base/isnum.c base/leapsecs_add.c base/leapsecs_init.c \
-	base/leapsecs_read.c base/leapsecs_sub.c base/lock_ex.c base/lock_exnb.c \
-	base/lock_un.c base/makeargs.c base/makesalt.c base/md5.c base/md5_crypt.c \
-	base/mess822_addr.c base/mess822_fold.c base/mess822_line.c \
+	base/fmt_xlong.c base/get_scram_secrets.c base/getEnvConfig.c base/getln2.c \
+	base/getln.c base/hmac_md5.c base/hmac_ripemd.c base/hmac_sha1.c \
+	base/hmac_sha224.c base/hmac_sha256.c base/hmac_sha384.c base/hmac_sha512.c \
+	base/in_crypt.c base/iopause.c base/isnum.c base/leapsecs_add.c \
+	base/leapsecs_init.c base/leapsecs_read.c base/leapsecs_sub.c base/lock_ex.c \
+	base/lock_exnb.c base/lock_un.c base/makeargs.c base/makesalt.c base/md5.c \
+	base/md5_crypt.c base/mess822_addr.c base/mess822_fold.c base/mess822_line.c \
 	base/mess822_quote.c base/mess822_when.c base/mess822_date.c base/mess822.h \
 	base/mess822_ok.c base/mess822_token.c base/mktempfile.c \
 	base/ndelay.c base/ndelay_off.c base/no_of_days.c base/now.c \
@@ -320,6 +319,7 @@ base/substdi.lo: substdio.c byte.h error.h
 base/substdo.lo: substdio.h str.h byte.h error.h
 base/substdio.lo: substdio.h
 base/substdio_copy.lo: substdio.h
+base/get_scram_secrets.lo: get_scram_secrets.h str.h stralloc.h scan.h authmethods.h
 base/getln.lo: getln.h substdio.h stralloc.h byte.h gen_alloc.h
 base/getln2.lo: getln.h substdio.h stralloc.h byte.h gen_alloc.h
 base/stralloc_arts.lo: stralloc.h byte.h str.h gen_alloc.h
