@@ -1,0 +1,24 @@
+/*
+ * $Log: authmethods.h,v $
+ * Revision 1.1  2022-08-04 10:04:41+05:30  Cprogrammer
+ * Initial revision
+ *
+ */
+#ifndef _AUTHMETHODS_H
+#define _AUTHMETHODS_H
+
+#define AUTH_LOGIN        1
+#define AUTH_PLAIN        2
+#define AUTH_CRAM_MD5     3
+#define AUTH_CRAM_SHA1    4
+#define AUTH_CRAM_SHA224  5
+#define AUTH_CRAM_SHA256  6
+#define AUTH_CRAM_SHA384  7
+#define AUTH_CRAM_SHA512  8
+#define AUTH_CRAM_RIPEMD  9
+#define AUTH_DIGEST_MD5   10
+#define AUTH_SCRAM_SHA1   11
+#define AUTH_SCRAM_SHA256 12
+#define AUTH_SCRAM_SHA512 13
+
+#endif
